mcdisp -jq qincr column added to output file mcdisp.jq

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -43,8 +43,8 @@
  \vspace{2cm}
  \\ \today}
 
-\author{M. Rotter\thanks{Max Planck Institute for Chemical Physics of Solids, N\"othnitzer Str. 40, D-01187 Dresden, 
-Germany, email: martin.rotter@cpfs.mpg.de}, \and
+\author{M. Rotter\thanks{Independent Scientific Consultant, Dresden, 
+Germany, email: martin\_rotter@mcphase.de}, \and
 Duc Manh Le \thanks{Dept. Physics and Astronomy, Seoul National University, Seoul 151-742, Korea}
 \and Joachim Keller \thanks{Universit\"at Regensburg}
 \and Lucian G Pascut,~Till Hoffmann 
