--- a/doc/mcdisp.tex
+++ b/doc/mcdisp.tex
@@ -78,6 +78,7 @@ $y||b$,$z||(a \times b)$ and $x$ perpendicular to $y$ and $z$).
                   Variables without prefixes will always be read and used.
                   After finishing the different processes, the results of the calculations stored e.g. in {\prg 001mcdisp.qei} and
                   {\prg 002mcdisp.qei} may be merged by commands like {\prg appendfile mcdisp.qei 001mcdisp.qei 002mcdisp.qei}.
+    \item Option {\prg -ignore_not_posdef_matrix_error} ignores error when energies get complex due to unphysical mf groundstate.
     \item Option {\prg -x} to calculate resonant inelastic x-ray intensities (maximized with respect to azimuth) instead of neutron intensities.
     \item Option {\prg -xa  azstp} to calculate resonant inelastic x-ray intensities with complete azimuth dependence for each reflection in steps azstep (deg).
     \item Option {\prg -xaf  azimuth} to calculate resonant inelastic x-ray intensities for the given azimuth (deg).
