makenn extended by readtable from file option -f

--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -111,11 +111,11 @@ of cp),
 -z (calculate partition sum instead of cp)
 
 \item [\prg cpso1ion 10 100 1 {[options]}: ] same as {\prg cpsingleion} but for output of program
-ic1ion (no file.levels.cef required, takes values from so1ion.out) .
+so1ion (no file.levels.cef required, takes values from so1ion.out) .
 \item[\prg cpic1ion 10 100 1 [options]:] same as {\prg cpsingleion} but for output of program
 ic1ion (no file.levels.cef required, takes values from ic1ion.out) .
-\item[\prg cpic1ion 10 100 1 [options]:] same as {\prg cpsingleion} but for output of program
-ic1ion (no file.levels.cef required, takes values from icf1ion.out) .
+\item[\prg cpicf1ion 10 100 1 [options]:] same as {\prg cpsingleion} but for output of program
+icf1ion (no file.levels.cef required, takes values from icf1ion.out) .
 					  
 \item [\prg epsdebye\index{epsdebye} Tmax dT Tdebye scale [d1 d2 datafile]:]	        
 		    calculates the phonon induced strain $\epsilon$ using the debye model
