--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -578,6 +578,8 @@ conventions see appendix~\ref{cfparconventions}.
 \input{ffacts.tex}
 \input{zk.tex}
 \input{cdoperator.tex}
+\input{mcdisp_formalism.tex}
+\input{bfktheory.tex}
 \clearpage
 \section{Solution of the exercises}
 
