5d formfactors entered in appendix of manual

--- a/doc/ffacts.tex
+++ b/doc/ffacts.tex
@@ -7,7 +7,7 @@ $\mbf Q$ and expressed in terms of expectation values
 of spherical Bessel functions $j_l(|\mbf Q|r)$ defined as 
 
 \begin{equation}\label{jls}
-\langle j_l(|\mbf Q|) \rangle =\int_0^{\inf} R^2(r) j_l(|\mbf Q|r) 4\pi r^2 dr
+\langle j_l(|\mbf Q|) \rangle=\int_0^{\inf} R^2(r) j_l(|\mbf Q|r) 4\pi r^2 dr
 \end{equation}
 
 Here $R(r)$ is the radial part of the single electron wave function in the
@@ -35,6 +35,7 @@ calculate $\langle j_l(|\mbf Q|) \rangle$. If no radial wavefunction is given, t
 \langle j_6(Q) \rangle&=&A Q^2 exp(-aQ^2)+B Q^2 exp(-bQ^2)+C Q^2 exp(-cQ^2)+D Q^2 
 \end{eqnarray}
  
+
 The coefficients A, a, B, b, C, c, D for $l=0,2,4,6$ and different ions are tabulated below. 
 
 {\footnotesize
@@ -423,6 +424,209 @@ The coefficients A, a, B, b, C, c, D for $l=0,2,4,6$ and different ions are tabu
 {F Am5  4} FFj6A=-0.0927 FFj6a= 6.0727 FFj6B=-0.2227 FFj6b= 3.7840 FFj6C= 0.2916 FFj6c= 1.3723 FFj6D= 0.0026 
 {F Am6  4} FFj6A= 0.0152 FFj6a= 6.0788 FFj6B=-0.3549 FFj6b= 3.8610 FFj6C= 0.3125 FFj6c= 1.4031 FFj6D= 0.0036 
 {F Am7  4} FFj6A= 0.1292 FFj6a= 6.0816 FFj6B=-0.4689 FFj6b= 3.8791 FFj6C= 0.3234 FFj6c= 1.3934 FFj6D= 0.0042 
+
+\end{verbatim}
+}
+
+For 5d Elements another exponential is added, values are taken from Kobayashi et al.
+Acta Cryst (2011). A67, 473–480:
+
+\begin{eqnarray}
+\langle j_0(Q) \rangle&=&A exp(-aQ^2)+B exp(-bQ^2)+C exp(-cQ^2)+D exp(-dQ^2)+E \\
+\langle j_2(Q) \rangle&=&A Q^2 exp(-aQ^2)+B Q^2 exp(-bQ^2)+C Q^2 exp(-cQ^2)+D Q^2 exp(-dQ^2)+ E Q^2 \\
+\langle j_4(Q) \rangle&=&A Q^2 exp(-aQ^2)+B Q^2 exp(-bQ^2)+C Q^2 exp(-cQ^2)+D Q^2 exp(-dQ^2)+ E Q^2 
+\end{eqnarray}
+
+{\scriptsize
+\begin{verbatim}
+#
+# j0  form factors for the 5d electrons of transition atoms and ions  
+#
+# Atoms and ions
+#￼electronic configuration)   A0 a0 B0 b0 C0 c0 D0 d0 E0 e(deviation of fit)
+#
+Hf2p_6s05d2 FFj0A=0.4229 FFj0a=50.465 FFj0B=0.7333 FFj0b=23.865 FFj0C=0.3798 FFj0c=4.051 FFj0D=0.2252 FFj0d=2.497 FFj0E=0.0018 0.0080
+Hf3p_6s05d1 FFj0A=0.3555 FFj0a=40.954 FFj0B=0.8483 FFj0b=21.726 FFj0C=0.4116 FFj0c=4.305 FFj0D=0.2101 FFj0d=2.349 FFj0E=0.0023 0.0051
+Ta2p_6s05d3 FFj0A=0.3976 FFj0a=45.095 FFj0B=0.7746 FFj0b=21.028 FFj0C=0.6098 FFj0c=3.471 FFj0D=0.4395 FFj0d=2.570 FFj0E=0.0020 0.0077
+Ta3p_6s05d2 FFj0A=0.3611 FFj0a=36.921 FFj0B=0.8579 FFj0b=19.195 FFj0C=0.4945 FFj0c=3.857 FFj0D=0.2781 FFj0d=2.303 FFj0E=0.0026 0.0057
+Ta4p_6s05d1 FFj0A=0.3065 FFj0a=31.817 FFj0B=0.9611 FFj0b=17.749 FFj0C=0.5463 FFj0c=3.979 FFj0D=0.2816 FFj0d=2.232 FFj0E=0.0030 0.0050
+W_6s05d6    FFj0A=0.3990 FFj0a=73.810 FFj0B=0.7138 FFj0b=22.815 FFj0C=2.0436 FFj0c=2.710 FFj0D=1.9319 FFj0d=2.559 FFj0E=0.0023 0.0524
+W_6s15d5    FFj0A=0.3811 FFj0a=62.707 FFj0B=0.7523 FFj0b=21.434 FFj0C=12.5449 FFj0c=2.702 FFj0D=12.4130 FFj0d=2.674 FFj0E=0.0023 0.0365
+W_6s25d4    FFj0A=0.3653 FFj0a=53.965 FFj0B=0.7926 FFj0b=20.078 FFj0C=0.8142 FFj0c=3.030 FFj0D=0.6581 FFj0d=2.476 FFj0E=0.0023 0.0247
+W1p_6s05d5  FFj0A=0.4077 FFj0a=51.367 FFj0B=0.7436 FFj0b=20.256 FFj0C=9.8283 FFj0c=2.780 FFj0D=9.6788 FFj0d=2.740 FFj0E=0.0021 0.0198
+W1p_6s15d4  FFj0A=0.3834 FFj0a=46.233 FFj0B=0.7890 FFj0b=19.278 FFj0C=1.4650 FFj0c=2.947 FFj0D=1.2945 FFj0d=2.628 FFj0E=0.0022 0.0138
+W2p_6s05d4  FFj0A=0.3876 FFj0a=40.340 FFj0B=0.8008 FFj0b=18.621 FFj0C=1.3911 FFj0c=2.995 FFj0D=1.2048 FFj0d=2.627 FFj0E=0.0023 0.0081
+W3p_6s05d3  FFj0A=0.3610 FFj0a=33.519 FFj0B=0.8717 FFj0b=17.176 FFj0C=0.6183 FFj0c=3.445 FFj0D=0.3883 FFj0d=2.276 FFj0E=0.0028 0.0041
+W4p_6s05d2  FFj0A=0.3221 FFj0a=29.047 FFj0B=0.9574 FFj0b=15.979 FFj0C=0.6287 FFj0c=3.597 FFj0D=0.3525 FFj0d=2.174 FFj0E=0.0033 0.0034
+W5p_6s05d1  FFj0A=0.2725 FFj0a=25.966 FFj0B=1.0558 FFj0b=14.954 FFj0C=0.6990 FFj0c=3.643 FFj0D=0.3745 FFj0d=2.145 FFj0E=0.0037 0.0045
+Re_6s05d7   FFj0A=0.3807 FFj0a=63.042 FFj0B=0.7497 FFj0b=19.967 FFj0C=6.5300 FFj0c=2.501 FFj0D=6.4013 FFj0d=2.451 FFj0E=0.0028 0.0480
+Re_6s15d6   FFj0A=0.3691 FFj0a=53.934 FFj0B=0.7837 FFj0b=18.790 FFj0C=9.1491 FFj0c=2.558 FFj0D=8.9983 FFj0d=2.517 FFj0E=0.0027 0.0333
+Re_6s25d5   FFj0A=0.3548 FFj0a=47.108 FFj0B=0.8210 FFj0b=17.769 FFj0C=9.8674 FFj0c=2.599 FFj0D=9.6938 FFj0d=2.556 FFj0E=0.0027 0.0248
+Re1p_6s05d6 FFj0A=0.3944 FFj0a=45.427 FFj0B=0.7742 FFj0b=17.948 FFj0C=3.1692 FFj0c=2.653 FFj0D=3.0028 FFj0d=2.521 FFj0E=0.0026 0.0192
+Re1p_6s15d5 FFj0A=0.3736 FFj0a=41.151 FFj0B=0.8160 FFj0b=17.158 FFj0C=7.0396 FFj0c=2.642 FFj0D=6.8523 FFj0d=2.577 FFj0E=0.0026 0.0139
+Re2p_6s05d5 FFj0A=0.3825 FFj0a=36.336 FFj0B=0.8218 FFj0b=16.636 FFj0C=8.7220 FFj0c=2.657 FFj0D=8.5201 FFj0d=2.601 FFj0E=0.0026 0.0083
+Re3p_6s05d4 FFj0A=0.3585 FFj0a=30.671 FFj0B=0.8863 FFj0b=15.527 FFj0C=0.8682 FFj0c=3.047 FFj0D=0.6263 FFj0d=2.280 FFj0E=0.0030 0.0052
+Re4p_6s05d3 FFj0A=0.2974 FFj0a=27.372 FFj0B=0.9826 FFj0b=14.807 FFj0C=1.8869 FFj0c=2.840 FFj0D=1.6100 FFj0d=2.476 FFj0E=0.0031 0.0036
+Re5p_6s05d2 FFj0A=0.3143 FFj0a=23.522 FFj0B=1.0276 FFj0b=13.505 FFj0C=0.7438 FFj0c=3.393 FFj0D=0.4059 FFj0d=2.030 FFj0E=0.0041 0.0037
+Re6p_6s05d1 FFj0A=0.2146 FFj0a=22.496 FFj0B=1.1616 FFj0b=13.064 FFj0C=1.0455 FFj0c=3.162 FFj0D=0.6734 FFj0d=2.196 FFj0E=0.0041 0.0035
+Os_6s05d8   FFj0A=0.3676 FFj0a=54.835 FFj0B=0.7793 FFj0b=17.716 FFj0C=2.0669 FFj0c=2.418 FFj0D=1.9224 FFj0d=2.247 FFj0E=0.0034 0.0446
+Os_6s15d7   FFj0A=0.3571 FFj0a=47.458 FFj0B=0.8123 FFj0b=16.770 FFj0C=1.2072 FFj0c=2.556 FFj0D=1.0404 FFj0d=2.211 FFj0E=0.0033 0.0314
+Os_6s25d6   FFj0A=0.3467 FFj0a=41.778 FFj0B=0.8458 FFj0b=15.918 FFj0C=5.6370 FFj0c=2.459 FFj0D=5.4472 FFj0d=2.381 FFj0E=0.0032 0.0222
+Os1p_6s05d7 FFj0A=0.3837 FFj0a=40.665 FFj0B=0.8006 FFj0b=16.096 FFj0C=3.5305 FFj0c=2.487 FFj0D=3.3488 FFj0d=2.366 FFj0E=0.0030 0.0190
+Os1p_6s15d6 FFj0A=0.3666 FFj0a=36.997 FFj0B=0.8390 FFj0b=15.425 FFj0C=2.6944 FFj0c=2.537 FFj0D=2.4916 FFj0d=2.360 FFj0E=0.0031 0.0140
+Os2p_6s05d6 FFj0A=0.3786 FFj0a=33.005 FFj0B=0.8412 FFj0b=14.990 FFj0C=7.0632 FFj0c=2.503 FFj0D=6.8462 FFj0d=2.433 FFj0E=0.0030 0.0098
+Os3p_6s05d5 FFj0A=0.3557 FFj0a=28.222 FFj0B=0.9002 FFj0b=14.140 FFj0C=2.5972 FFj0c=2.601 FFj0D=2.3444 FFj0d=2.376 FFj0E=0.0032 0.0041
+Os4p_6s05d4 FFj0A=0.3337 FFj0a=24.723 FFj0B=0.9655 FFj0b=13.288 FFj0C=0.9653 FFj0c=2.906 FFj0D=0.6698 FFj0d=2.117 FFj0E=0.0037 0.0050
+Os5p_6s05d3 FFj0A=0.3055 FFj0a=22.152 FFj0B=1.0395 FFj0b=12.529 FFj0C=0.9158 FFj0c=3.016 FFj0D=0.5750 FFj0d=2.032 FFj0E=0.0042 0.0022
+Os6p_6s05d2 FFj0A=0.2714 FFj0a=20.218 FFj0B=1.1211 FFj0b=11.851 FFj0C=0.9773 FFj0c=3.050 FFj0D=0.5894 FFj0d=2.005 FFj0E=0.0046 0.0021
+Os7p_6s05d1 FFj0A=0.2101 FFj0a=19.108 FFj0B=1.2240 FFj0b=11.347 FFj0C=1.2543 FFj0c=2.933 FFj0D=0.8250 FFj0d=2.088 FFj0E=0.0048 0.0022
+Ir_6s05d9   FFj0A=0.3564 FFj0a=48.464 FFj0B=0.8049 FFj0b=15.923 FFj0C=2.5258 FFj0c=2.265 FFj0D=2.3675 FFj0d=2.121 FFj0E=0.0040 0.0420
+Ir_6s15d8   FFj0A=0.3492 FFj0a=42.195 FFj0B=0.8350 FFj0b=15.113 FFj0C=5.1496 FFj0c=2.279 FFj0D=4.9686 FFj0d=2.201 FFj0E=0.0038 0.0296
+Ir_6s25d7   FFj0A=0.3400 FFj0a=37.499 FFj0B=0.8675 FFj0b=14.402 FFj0C=2.3703 FFj0c=2.370 FFj0D=2.1661 FFj0d=2.177 FFj0E=0.0037 0.0214
+Ir1p_6s05d8 FFj0A=0.3744 FFj0a=36.764 FFj0B=0.8240 FFj0b=14.576 FFj0C=8.8616 FFj0c=2.303 FFj0D=8.6664 FFj0d=2.255 FFj0E=0.0035 0.0191
+Ir1p_6s15d7 FFj0A=0.3604 FFj0a=33.570 FFj0B=0.8597 FFj0b=13.993 FFj0C=2.1686 FFj0c=2.412 FFj0D=1.9518 FFj0d=2.188 FFj0E=0.0036 0.0142
+Ir2p_6s05d7 FFj0A=0.3802 FFj0a=30.032 FFj0B=0.8550 FFj0b=13.567 FFj0C=1.6185 FFj0c=2.488 FFj0D=1.3866 FFj0d=2.162 FFj0E=0.0035 0.0094
+Ir3p_6s05d6 FFj0A=0.3678 FFj0a=25.828 FFj0B=0.9065 FFj0b=12.788 FFj0C=0.8587 FFj0c=2.745 FFj0D=0.5883 FFj0d=1.960 FFj0E=0.0040 0.0049
+Ir4p_6s05d5 FFj0A=0.3969 FFj0a=22.050 FFj0B=0.9310 FFj0b=11.768 FFj0C=0.7090 FFj0c=3.017 FFj0D=0.3857 FFj0d=1.778 FFj0E=0.0047 0.0045
+Ir5p_6s05d4 FFj0A=0.3059 FFj0a=20.759 FFj0B=1.0432 FFj0b=11.622 FFj0C=1.3457 FFj0c=2.655 FFj0D=1.0008 FFj0d=2.066 FFj0E=0.0043 0.0043
+Ir6p_6s05d3 FFj0A=0.2854 FFj0a=18.867 FFj0B=1.1123 FFj0b=10.982 FFj0C=1.1403 FFj0c=2.782 FFj0D=0.7475 FFj0d=1.959 FFj0E=0.0049 0.0035
+Pt1p_6s05d9 FFj0A=0.3664 FFj0a=33.503 FFj0B=0.8449 FFj0b=13.303 FFj0C=2.6192 FFj0c=2.227 FFj0D=2.4116 FFj0d=2.059 FFj0E=0.0041 0.0189
+Pt2p_6s05d8 FFj0A=0.3701 FFj0a=27.799 FFj0B=0.8761 FFj0b=12.480 FFj0C=3.2959 FFj0c=2.258 FFj0D=3.0535 FFj0d=2.106 FFj0E=0.0040 0.0098
+Pt3p_6s05d7 FFj0A=0.3606 FFj0a=24.052 FFj0B=0.9205 FFj0b=11.833 FFj0C=4.0612 FFj0c=2.271 FFj0D=3.7841 FFj0d=2.133 FFj0E=0.0041 0.0049
+Pt4p_6s05d6 FFj0A=0.3429 FFj0a=21.358 FFj0B=0.9753 FFj0b=11.261 FFj0C=2.2859 FFj0c=2.357 FFj0D=1.9719 FFj0d=2.074 FFj0E=0.0043 0.0033
+Pt5p_6s05d5 FFj0A=0.3649 FFj0a=18.762 FFj0B=1.0102 FFj0b=10.456 FFj0C=0.8785 FFj0c=2.765 FFj0D=0.5087 FFj0d=1.737 FFj0E=0.0053 0.0033
+Pt6p_6s05d4 FFj0A=0.2877 FFj0a=17.780 FFj0B=1.1111 FFj0b=10.263 FFj0C=1.9416 FFj0c=2.432 FFj0D=1.5477 FFj0d=2.015 FFj0E=0.0049 0.0026
+Au1p_6s15d9 FFj0A=0.3475 FFj0a=28.294 FFj0B=0.8964 FFj0b=11.794 FFj0C=4.5383 FFj0c=2.086 FFj0D=4.2988 FFj0d=1.983 FFj0E=0.0047 0.0143
+Au2p_6s05d9 FFj0A=0.3664 FFj0a=25.714 FFj0B=0.8919 FFj0b=11.488 FFj0C=1.7302 FFj0c=2.207 FFj0D=1.4763 FFj0d=1.908 FFj0E=0.0046 0.0102
+Au3p_6s05d8 FFj0A=0.3639 FFj0a=22.330 FFj0B=0.9313 FFj0b=10.883 FFj0C=1.1359 FFj0c=2.355 FFj0D=0.8455 FFj0d=1.809 FFj0E=0.0048 0.0068
+Au4p_6s05d7 FFj0A=0.3472 FFj0a=19.944 FFj0B=0.9807 FFj0b=10.424 FFj0C=3.8228 FFj0c=2.169 FFj0D=3.4995 FFj0d=2.009 FFj0E=0.0047 0.0040
+Au5p_6s05d6 FFj0A=0.3292 FFj0a=18.073 FFj0B=1.0376 FFj0b=9.957  FFj0C=2.2028 FFj0c=2.257 FFj0D=1.8410 FFj0d=1.938 FFj0E=0.0050 0.0035
+#
+#
+# j2 form factors for the 5d electrons of transition atoms and ions 
+#
+# Atoms and ions
+# electronic configuration  A2 a2 B2 b2 C2 c2 D2 d2 E2 e
+#
+Hf2p_6s05d2 FFj2A=9.6670 FFj2a=33.435 FFj2B=5.2429 FFj2b=13.529 FFj2C=0.5533 FFj2c=1.402 FFj2D=0.4934 FFj2d=1.254 FFj2E=0.0033 0.0448 
+Hf3p_6s05d1 FFj2A=7.5646 FFj2a=27.367 FFj2B=5.0743 FFj2b=12.402 FFj2C=0.4133 FFj2c=1.742 FFj2D=0.3163 FFj2d=1.437 FFj2E=0.0012 0.0251 
+Ta2p_6s05d3 FFj2A=8.1746 FFj2a=29.871 FFj2B=4.9405 FFj2b=12.188 FFj2C=1.1294 FFj2c=1.254 FFj2D=1.0658 FFj2d=1.181 FFj2E=0.0046 0.0411 
+Ta3p_6s05d2 FFj2A=6.5998 FFj2a=25.026 FFj2B=4.7913 FFj2b=11.303 FFj2C=0.7801 FFj2c=1.529 FFj2D=0.6820 FFj2d=1.382 FFj2E=0.0019 0.0239 
+Ta4p_6s05d1 FFj2A=5.5048 FFj2a=21.620 FFj2B=4.6734 FFj2b=10.556 FFj2C=0.2181 FFj2c=2.100 FFj2D=0.0810 FFj2d=1.049 FFj2E=0.0016 0.0154 
+W_6s05d6 FFj2A=8.4216 FFj2a=64.652 FFj2B=7.6983 FFj2b=23.124 FFj2C=2.3605 FFj2c=8.583 FFj2D=0.3876 FFj2d=4.620 FFj2E=0.0033 0.0424 
+W_6s15d5 FFj2A=6.9289 FFj2a=53.425 FFj2B=7.2157 FFj2b=20.016 FFj2C=5.7754 FFj2c=6.543 FFj2D=4.2114 FFj2d=5.854 FFj2E=0.0036 0.0398 
+W_6s25d4 FFj2A=5.4017 FFj2a=47.110 FFj2B=6.9113 FFj2b=18.760 FFj2C=7.0586 FFj2c=6.363 FFj2D=5.4525 FFj2d=5.802 FFj2E=0.0040 0.0400 
+W1p_6s05d5 FFj2A=5.6854 FFj2a=44.743 FFj2B=6.8903 FFj2b=18.753 FFj2C=7.8523 FFj2c=6.308 FFj2D=6.3447 FFj2d=5.842 FFj2E=0.0038 0.0383 
+W1p_6s15d4 FFj2A=4.5118 FFj2a=41.281 FFj2B=6.7136 FFj2b=17.964 FFj2C=7.6331 FFj2c=6.269 FFj2D=6.0365 FFj2d=5.758 FFj2E=0.0042 0.0405 
+W2p_6s05d4 FFj2A=7.0301 FFj2a=26.990 FFj2B=4.6604 FFj2b=11.083 FFj2C=0.8220 FFj2c=1.145 FFj2D=0.7581 FFj2d=1.042 FFj2E=0.0068 0.0381 
+W3p_6s05d3 FFj2A=5.8036 FFj2a=22.969 FFj2B=4.5243 FFj2b=10.361 FFj2C=0.7897 FFj2c=1.388 FFj2D=0.6927 FFj2d=1.248 FFj2E=0.0031 0.0229 
+W4p_6s05d2 FFj2A=4.9006 FFj2a=20.117 FFj2B=4.4360 FFj2b=9.765 FFj2C=2.0009 FFj2c=1.497 FFj2D=1.8714 FFj2d=1.431 FFj2E=0.0014 0.0145 
+W5p_6s05d1 FFj2A=4.1973 FFj2a=17.967 FFj2B=4.3791 FFj2b=9.255 FFj2C=1.8830 FFj2c=1.603 FFj2D=1.7205 FFj2d=1.518 FFj2E=0.0004 0.0088 
+Re_6s05d7 FFj2A=6.7574 FFj2a=55.529 FFj2B=6.7931 FFj2b=20.125 FFj2C=2.3113 FFj2c=7.529 FFj2D=0.5004 FFj2d=4.412 FFj2E=0.0037 0.0365 
+Re_6s15d6 FFj2A=5.5830 FFj2a=46.852 FFj2B=6.4516 FFj2b=17.855 FFj2C=5.0609 FFj2c=6.037 FFj2D=3.5427 FFj2d=5.312 FFj2E=0.0040 0.0334 
+Re_6s25d5 FFj2A=4.4322 FFj2a=41.798 FFj2B=6.2063 FFj2b=16.844 FFj2C=9.8763 FFj2c=5.751 FFj2D=8.3294 FFj2d=5.406 FFj2E=0.0043 0.0327 
+Re1p_6s05d6 FFj2A=4.7231 FFj2a=40.130 FFj2B=6.2139 FFj2b=16.902 FFj2C=8.8240 FFj2c=5.766 FFj2D=7.3608 FFj2d=5.396 FFj2E=0.0042 0.0316 
+Re1p_6s15d5 FFj2A=3.7875 FFj2a=37.254 FFj2B=6.0587 FFj2b=16.264 FFj2C=6.9896 FFj2c=5.786 FFj2D=5.4457 FFj2d=5.279 FFj2E=0.0045 0.0329 
+Re2p_6s05d5 FFj2A=3.0708 FFj2a=33.896 FFj2B=5.9941 FFj2b=15.817 FFj2C=6.7816 FFj2c=5.768 FFj2D=5.2056 FFj2d=5.231 FFj2E=0.0047 0.0343 
+Re3p_6s05d4 FFj2A=1.7870 FFj2a=31.248 FFj2B=5.9068 FFj2b=15.160 FFj2C=17.4262 FFj2c=5.551 FFj2D=15.6856 FFj2d=5.339 FFj2E=0.0053 0.0374 
+Re4p_6s05d3 FFj2A=4.4033 FFj2a=18.733 FFj2B=4.1971 FFj2b=9.047 FFj2C=2.3106 FFj2c=1.352 FFj2D=2.1866 FFj2d=1.299 FFj2E=0.0025 0.0158 
+Re5p_6s05d2 FFj2A=3.8162 FFj2a=16.843 FFj2B=4.1400 FFj2b=8.605 FFj2C=4.0882 FFj2c=1.443 FFj2D=3.9333 FFj2d=1.408 FFj2E=0.0012 0.0132 
+Re6p_6s05d1 FFj2A=3.3349 FFj2a=15.341 FFj2B=4.1015 FFj2b=8.213 FFj2C=2.3511 FFj2c=1.531 FFj2D=2.1651 FFj2d=1.459 FFj2E=0.0003 0.0067 
+Os_6s05d8 FFj2A=5.5418 FFj2a=48.893 FFj2B=6.0803 FFj2b=17.984 FFj2C=2.2542 FFj2c=6.853 FFj2D=0.5285 FFj2d=4.095 FFj2E=0.0040 0.0303 
+Os_6s15d7 FFj2A=4.6511 FFj2a=41.610 FFj2B=5.8194 FFj2b=16.062 FFj2C=6.7172 FFj2c=5.447 FFj2D=5.2689 FFj2d=4.986 FFj2E=0.0043 0.0274 
+Os_6s25d6 FFj2A=3.7421 FFj2a=37.491 FFj2B=5.6137 FFj2b=15.256 FFj2C=10.0488 FFj2c=5.293 FFj2D=8.5683 FFj2d=4.991 FFj2E=0.0046 0.0259 
+Os1p_6s05d7 FFj2A=4.0236 FFj2a=36.272 FFj2B=5.6349 FFj2b=15.338 FFj2C=8.6568 FFj2c=5.318 FFj2D=7.2505 FFj2d=4.980 FFj2E=0.0044 0.0253 
+Os1p_6s15d6 FFj2A=3.2611 FFj2a=33.818 FFj2B=5.4945 FFj2b=14.808 FFj2C=5.7610 FFj2c=5.391 FFj2D=4.2811 FFj2d=4.827 FFj2E=0.0048 0.0261 
+Os2p_6s05d6 FFj2A=2.7289 FFj2a=30.900 FFj2B=5.4357 FFj2b=14.396 FFj2C=18.6546 FFj2c=5.151 FFj2D=17.1708 FFj2d=4.993 FFj2E=0.0050 0.0268 
+Os3p_6s05d5 FFj2A=4.5913 FFj2a=19.692 FFj2B=4.0615 FFj2b=8.862 FFj2C=0.9950 FFj2c=1.086 FFj2D=0.9081 FFj2d=0.986 FFj2E=0.0077 0.0206 
+Os4p_6s05d4 FFj2A=3.9724 FFj2a=17.514 FFj2B=3.9817 FFj2b=8.421 FFj2C=0.7719 FFj2c=1.264 FFj2D=0.6552 FFj2d=1.107 FFj2E=0.0042 0.0131 
+Os5p_6s05d3 FFj2A=3.4764 FFj2a=15.826 FFj2B=3.9241 FFj2b=8.032 FFj2C=0.6854 FFj2c=1.397 FFj2D=0.5394 FFj2d=1.184 FFj2E=0.0024 0.0098 
+Os6p_6s05d2 FFj2A=3.0642 FFj2a=14.479 FFj2B=3.8847 FFj2b=7.686 FFj2C=4.7235 FFj2c=1.384 FFj2D=4.5485 FFj2d=1.352 FFj2E=0.0012 0.0063 
+Os7p_6s05d1 FFj2A=2.7164 FFj2a=13.366 FFj2B=3.8554 FFj2b=7.370 FFj2C=5.0211 FFj2c=1.439 FFj2D=4.8166 FFj2d=1.405 FFj2E=0.0004 0.0064 
+Ir_6s05d9 FFj2A=4.6102 FFj2a=43.878 FFj2B=5.4892 FFj2b=16.394 FFj2C=2.1707 FFj2c=6.423 FFj2D=0.4761 FFj2d=3.722 FFj2E=0.0043 0.0254 
+Ir_6s15d8 FFj2A=3.9372 FFj2a=37.508 FFj2B=5.2846 FFj2b=14.661 FFj2C=3.7267 FFj2c=5.263 FFj2D=2.3158 FFj2d=4.416 FFj2E=0.0045 0.0217 
+Ir_6s25d7 FFj2A=3.2263 FFj2a=33.922 FFj2B=5.1086 FFj2b=13.921 FFj2C=6.5993 FFj2c=4.978 FFj2D=5.1841 FFj2d=4.549 FFj2E=0.0048 0.0203 
+Ir1p_6s05d8 FFj2A=3.4956 FFj2a=32.991 FFj2B=5.1369 FFj2b=13.998 FFj2C=8.3991 FFj2c=4.924 FFj2D=7.0561 FFj2d=4.612 FFj2E=0.0047 0.0196 
+Ir1p_6s15d7 FFj2A=2.8732 FFj2a=30.809 FFj2B=5.0094 FFj2b=13.522 FFj2C=6.8656 FFj2c=4.933 FFj2D=5.4669 FFj2d=4.526 FFj2E=0.0050 0.0199 
+Ir2p_6s05d7 FFj2A=2.4419 FFj2a=28.356 FFj2B=4.9470 FFj2b=13.222 FFj2C=4.7478 FFj2c=5.029 FFj2D=3.3259 FFj2d=4.393 FFj2E=0.0052 0.0208 
+Ir3p_6s05d6 FFj2A=1.5883 FFj2a=25.969 FFj2B=4.8472 FFj2b=12.711 FFj2C=5.6507 FFj2c=4.949 FFj2D=4.1190 FFj2d=4.388 FFj2E=0.0056 0.0218 
+Ir4p_6s05d5 FFj2A=3.5964 FFj2a=16.439 FFj2B=3.7872 FFj2b=7.873 FFj2C=1.2303 FFj2c=1.092 FFj2D=1.1232 FFj2d=1.003 FFj2E=0.0068 0.0127 
+Ir5p_6s05d4 FFj2A=3.1710 FFj2a=14.923 FFj2B=3.7320 FFj2b=7.529 FFj2C=1.5400 FFj2c=1.200 FFj2D=1.4048 FFj2d=1.119 FFj2E=0.0040 0.0091 
+Ir6p_6s05d3 FFj2A=2.8163 FFj2a=13.697 FFj2B=3.6906 FFj2b=7.219 FFj2C=5.2957 FFj2c=1.254 FFj2D=5.1328 FFj2d=1.228 FFj2E=0.0024 0.0109 
+Pt1p_6s05d9 FFj2A=3.0783 FFj2a=30.198 FFj2B=4.7065 FFj2b=12.857 FFj2C=5.7270 FFj2c=4.650 FFj2D=4.4425 FFj2d=4.222 FFj2E=0.0048 0.0156 
+Pt2p_6s05d8 FFj2A=2.2407 FFj2a=26.003 FFj2B=4.5300 FFj2b=12.118 FFj2C=6.7189 FFj2c=4.557 FFj2D=5.3954 FFj2d=4.187 FFj2E=0.0053 0.0147 
+Pt3p_6s05d7 FFj2A=1.5391 FFj2a=23.689 FFj2B=4.4263 FFj2b=11.645 FFj2C=8.5673 FFj2c=4.482 FFj2D=7.1591 FFj2d=4.181 FFj2E=0.0057 0.0160 
+Pt4p_6s05d6 FFj2A=0.9477 FFj2a=22.775 FFj2B=4.3337 FFj2b=11.319 FFj2C=7.2374 FFj2c=4.500 FFj2D=5.7086 FFj2d=4.106 FFj2E=0.0062 0.0166 
+Pt5p_6s05d5 FFj2A=0.5132 FFj2a=23.124 FFj2B=4.1835 FFj2b=11.009 FFj2C=7.4312 FFj2c=4.478 FFj2D=5.7759 FFj2d=4.065 FFj2E=0.0066 0.0176 
+Pt6p_6s05d4 FFj2A=2.5907 FFj2a=12.991 FFj2B=3.5155 FFj2b=6.801 FFj2C=0.7511 FFj2c=1.206 FFj2D=0.6014 FFj2d=1.022 FFj2E=0.0043 0.0070 
+Au1p_6s15d9 FFj2A=2.3189 FFj2a=25.954 FFj2B=4.2267 FFj2b=11.444 FFj2C=9.0997 FFj2c=4.215 FFj2D=7.8523 FFj2d=3.981 FFj2E=0.0052 0.0120 
+Au2p_6s05d9 FFj2A=2.0676 FFj2a=23.960 FFj2B=4.1678 FFj2b=11.164 FFj2C=13.3827 FFj2c=4.151 FFj2D=12.1447 FFj2d=3.996 FFj2E=0.0054 0.0130 
+Au3p_6s05d8 FFj2A=1.4776 FFj2a=21.784 FFj2B=4.0585 FFj2b=10.746 FFj2C=5.9059 FFj2c=4.242 FFj2D=4.5905 FFj2d=3.842 FFj2E=0.0058 0.0116 
+Au4p_6s05d7 FFj2A=2.9775 FFj2a=14.632 FFj2B=3.4472 FFj2b=6.956 FFj2C=1.9784 FFj2c=0.794 FFj2D=1.8980 FFj2d=0.745 FFj2E=0.0182 0.0123 
+Au5p_6s05d6 FFj2A=0.5763 FFj2a=20.517 FFj2B=3.8572 FFj2b=10.171 FFj2C=6.0222 FFj2c=4.213 FFj2D=4.5020 FFj2d=3.760 FFj2E=0.0067 0.0129 
+#
+# j4 form factors for the 5d electrons of transition atoms and ions from Hf to Re.
+#
+# Atoms and ions
+# electronic configuration  A4 a4 B4 b4 C4 c4 D4 d4 E4 e
+#
+Hf2p_6s05d2 FFj4A=2.5342 FFj4a=43.826 FFj4B=1.8466 FFj4b=10.393 FFj4C=0.7761 FFj4c=4.888 FFj4D=0.0327 FFj4d=1.589 FFj4E=0.0017 0.0046 
+Hf3p_6s05d1 FFj4A=2.3574 FFj4a=32.651 FFj4B=1.8717 FFj4b=8.476 FFj4C=0.6367 FFj4c=3.953 FFj4D=0.1133 FFj4d=2.169 FFj4E=0.0017 0.0048 
+Ta2p_6s05d3 FFj4A=2.1974 FFj4a=38.294 FFj4B=1.6220 FFj4b=8.838 FFj4C=0.6836 FFj4c=4.212 FFj4D=0.0539 FFj4d=1.746 FFj4E=0.0016 0.0069 
+Ta3p_6s05d2 FFj4A=2.0884 FFj4a=29.531 FFj4B=1.7145 FFj4b=7.385 FFj4C=1.1809 FFj4c=2.994 FFj4D=0.7705 FFj4d=2.577 FFj4E=0.0016 0.0066 
+Ta4p_6s05d1 FFj4A=2.0226 FFj4a=24.035 FFj4B=1.7084 FFj4b=6.594 FFj4C=1.1799 FFj4c=2.775 FFj4D=0.8384 FFj4d=2.430 FFj4E=0.0020 0.0053 
+W_6s05d6 FFj4A=2.1307 FFj4a=79.955 FFj4B=1.4055 FFj4b=11.876 FFj4C=0.8808 FFj4c=4.969 FFj4D=0.0120 FFj4d=0.419 FFj4E=0.0051 0.0085 
+W_6s15d5 FFj4A=1.9667 FFj4a=60.069 FFj4B=1.3446 FFj4b=9.992 FFj4C=0.7861 FFj4c=4.554 FFj4D=0.0197 FFj4d=1.087 FFj4E=0.0021 0.0083 
+W_6s25d4 FFj4A=1.8575 FFj4a=47.554 FFj4B=1.3868 FFj4b=8.437 FFj4C=0.6537 FFj4c=3.939 FFj4D=0.0570 FFj4d=1.722 FFj4E=0.0015 0.0092 
+W1p_6s05d5 FFj4A=2.0231 FFj4a=46.962 FFj4B=1.3937 FFj4b=9.263 FFj4C=0.7420 FFj4c=4.332 FFj4D=0.0288 FFj4d=1.327 FFj4E=0.0018 0.0062 
+W1p_6s15d4 FFj4A=1.9122 FFj4a=39.952 FFj4B=1.4385 FFj4b=8.019 FFj4C=0.6336 FFj4c=3.725 FFj4D=0.0819 FFj4d=1.868 FFj4E=0.0015 0.0073 
+W2p_6s05d4 FFj4A=1.9355 FFj4a=33.935 FFj4B=1.5020 FFj4b=7.541 FFj4C=0.6453 FFj4c=3.375 FFj4D=0.1601 FFj4d=2.110 FFj4E=0.0015 0.0063 
+W3p_6s05d3 FFj4A=1.8752 FFj4a=26.706 FFj4B=1.5440 FFj4b=6.585 FFj4C=5.9785 FFj4c=2.575 FFj4D=5.6111 FFj4d=2.516 FFj4E=0.0018 0.0061 
+W4p_6s05d2 FFj4A=1.8309 FFj4a=22.142 FFj4B=1.5605 FFj4b=5.935 FFj4C=1.4898 FFj4c=2.482 FFj4D=1.1930 FFj4d=2.266 FFj4E=0.0022 0.0066 
+W5p_6s05d1 FFj4A=1.7958 FFj4a=18.987 FFj4B=1.5913 FFj4b=5.419 FFj4C=2.0498 FFj4c=2.278 FFj4D=1.8262 FFj4d=2.156 FFj4E=0.0026 0.0050 
+Re_6s05d7 FFj4A=1.8013 FFj4a=63.944 FFj4B=1.1773 FFj4b=9.808 FFj4C=0.7912 FFj4c=4.380 FFj4D=0.0155 FFj4d=0.795 FFj4E=0.0027 0.0080 
+Re_6s15d6 FFj4A=1.7056 FFj4a=49.628 FFj4B=1.2209 FFj4b=8.231 FFj4C=0.6637 FFj4c=3.836 FFj4D=0.0443 FFj4d=1.514 FFj4E=0.0015 0.0088 
+Re_6s25d5 FFj4A=1.6402 FFj4a=40.319 FFj4B=1.3192 FFj4b=7.064 FFj4C=0.8659 FFj4c=2.901 FFj4D=0.4299 FFj4d=2.306 FFj4E=0.0013 0.0098 
+Re1p_6s05d6 FFj4A=1.7723 FFj4a=40.683 FFj4B=1.2795 FFj4b=7.798 FFj4C=0.6385 FFj4c=3.630 FFj4D=0.0656 FFj4d=1.686 FFj4E=0.0015 0.0084 
+Re1p_6s15d5 FFj4A=1.6968 FFj4a=34.939 FFj4B=1.3535 FFj4b=6.851 FFj4C=1.7292 FFj4c=2.681 FFj4D=1.3118 FFj4d=2.445 FFj4E=0.0014 0.0084 
+Re2p_6s05d5 FFj4A=1.7305 FFj4a=30.305 FFj4B=1.3808 FFj4b=6.606 FFj4C=1.5787 FFj4c=2.630 FFj4D=1.1785 FFj4d=2.378 FFj4E=0.0015 0.0079 
+Re3p_6s05d4 FFj4A=1.6969 FFj4a=24.325 FFj4B=1.4088 FFj4b=5.901 FFj4C=1.5067 FFj4c=2.424 FFj4D=1.1834 FFj4d=2.209 FFj4E=0.0019 0.0069 
+Re4p_6s05d3 FFj4A=1.6679 FFj4a=20.454 FFj4B=1.4439 FFj4b=5.357 FFj4C=0.8175 FFj4c=2.321 FFj4D=0.5685 FFj4d=1.976 FFj4E=0.0024 0.0056 
+Re5p_6s05d2 FFj4A=1.6427 FFj4a=17.722 FFj4B=1.4880 FFj4b=4.916 FFj4C=0.5419 FFj4c=2.189 FFj4D=0.3694 FFj4d=1.781 FFj4E=0.0029 0.0050 
+Re6p_6s05d1 FFj4A=1.6211 FFj4a=15.673 FFj4B=1.5419 FFj4b=4.548 FFj4C=1.9205 FFj4c=1.833 FFj4D=1.8287 FFj4d=1.766 FFj4E=0.0034 0.0055 
+Os_6s05d8 FFj4A=1.5677 FFj4a=53.075 FFj4B=1.0631 FFj4b=8.143 FFj4C=0.6808 FFj4c=3.771 FFj4D=0.0308 FFj4d=1.243 FFj4E=0.0017 0.0095 
+Os_6s15d7 FFj4A=1.5109 FFj4a=42.193 FFj4B=1.1910 FFj4b=6.850 FFj4C=2.4597 FFj4c=2.602 FFj4D=2.0163 FFj4d=2.444 FFj4E=0.0011 0.0100 
+Os_6s25d6 FFj4A=1.4734 FFj4a=34.814 FFj4B=1.2105 FFj4b=6.165 FFj4C=0.9468 FFj4c=2.534 FFj4D=0.5773 FFj4d=2.131 FFj4E=0.0015 0.0108 
+Os1p_6s05d7 FFj4A=1.5777 FFj4a=35.746 FFj4B=1.2222 FFj4b=6.650 FFj4C=1.7260 FFj4c=2.590 FFj4D=1.2942 FFj4d=2.360 FFj4E=0.0012 0.0081 
+Os1p_6s15d6 FFj4A=1.5274 FFj4a=30.891 FFj4B=1.2364 FFj4b=6.044 FFj4C=1.4100 FFj4c=2.431 FFj4D=1.0480 FFj4d=2.188 FFj4E=0.0016 0.0086 
+Os2p_6s05d6 FFj4A=1.5637 FFj4a=27.292 FFj4B=1.2627 FFj4b=5.880 FFj4C=1.3526 FFj4c=2.393 FFj4D=1.0026 FFj4d=2.146 FFj4E=0.0017 0.0071 
+Os3p_6s05d5 FFj4A=1.5453 FFj4a=22.300 FFj4B=1.3058 FFj4b=5.301 FFj4C=0.7208 FFj4c=2.294 FFj4D=0.4480 FFj4d=1.881 FFj4E=0.0022 0.0071 
+Os4p_6s05d4 FFj4A=1.5267 FFj4a=18.972 FFj4B=1.3619 FFj4b=4.834 FFj4C=3.0121 FFj4c=1.938 FFj4D=2.8240 FFj4d=1.877 FFj4E=0.0027 0.0091 
+Os5p_6s05d3 FFj4A=1.5094 FFj4a=16.573 FFj4B=1.4158 FFj4b=4.458 FFj4C=0.8448 FFj4c=1.797 FFj4D=0.7349 FFj4d=1.638 FFj4E=0.0033 0.0058 
+Os6p_6s05d2 FFj4A=1.4938 FFj4a=14.751 FFj4B=1.4678 FFj4b=4.149 FFj4C=0.8091 FFj4c=1.535 FFj4D=0.7720 FFj4d=1.442 FFj4E=0.0041 0.0048 
+Os7p_6s05d1 FFj4A=0.0341 FFj4a=37.994 FFj4B=1.4680 FFj4b=13.159 FFj4C=1.5216 FFj4c=3.898 FFj4D=0.0308 FFj4d=0.550 FFj4E=0.0083 0.0044 
+Ir_6s05d9 FFj4A=1.3913 FFj4a=45.243 FFj4B=1.0627 FFj4b=6.722 FFj4C=2.5141 FFj4c=2.534 FFj4D=2.0510 FFj4d=2.383 FFj4E=0.0009 0.0099 
+Ir_6s15d8 FFj4A=1.3605 FFj4a=36.399 FFj4B=1.0953 FFj4b=5.990 FFj4C=1.7223 FFj4c=2.353 FFj4D=1.3416 FFj4d=2.162 FFj4E=0.0014 0.0111 
+Ir_6s25d7 FFj4A=1.3382 FFj4a=30.628 FFj4B=1.1376 FFj4b=5.420 FFj4C=1.4261 FFj4c=2.160 FFj4D=1.1282 FFj4d=1.974 FFj4E=0.0019 0.0115 
+Ir1p_6s05d8 FFj4A=1.4233 FFj4a=31.680 FFj4B=1.1221 FFj4b=5.872 FFj4C=2.2721 FFj4c=2.301 FFj4D=1.8973 FFj4d=2.163 FFj4E=0.0015 0.0108 
+Ir1p_6s15d7 FFj4A=1.3875 FFj4a=27.660 FFj4B=1.1508 FFj4b=5.362 FFj4C=0.6586 FFj4c=2.302 FFj4D=0.3554 FFj4d=1.810 FFj4E=0.0020 0.0094 
+Ir2p_6s05d7 FFj4A=1.4233 FFj4a=24.796 FFj4B=1.1799 FFj4b=5.246 FFj4C=3.2548 FFj4c=2.072 FFj4D=2.9649 FFj4d=1.997 FFj4E=0.0020 0.0099 
+Ir3p_6s05d6 FFj4A=1.4149 FFj4a=20.563 FFj4B=1.2388 FFj4b=4.761 FFj4C=1.1780 FFj4c=1.928 FFj4D=0.9708 FFj4d=1.761 FFj4E=0.0026 0.0071 
+Ir4p_6s05d5 FFj4A=1.4039 FFj4a=17.664 FFj4B=1.2993 FFj4b=4.371 FFj4C=3.5599 FFj4c=1.661 FFj4D=3.4340 FFj4d=1.625 FFj4E=0.0033 0.0065 
+Ir5p_6s05d4 FFj4A=1.3927 FFj4a=15.539 FFj4B=1.3536 FFj4b=4.057 FFj4C=0.2946 FFj4c=1.554 FFj4D=0.2412 FFj4d=1.266 FFj4E=0.0043 0.0061 
+Ir6p_6s05d3 FFj4A=0.0364 FFj4a=41.929 FFj4B=1.3662 FFj4b=13.771 FFj4C=1.4130 FFj4c=3.784 FFj4D=0.0384 FFj4d=0.190 FFj4E=0.0241 0.0043 
+Pt1p_6s05d9 FFj4A=1.2955 FFj4a=28.407 FFj4B=1.0534 FFj4b=5.206 FFj4C=1.2452 FFj4c=2.096 FFj4D=0.9336 FFj4d=1.881 FFj4E=0.0018 0.0104 
+Pt2p_6s05d8 FFj4A=1.3038 FFj4a=22.692 FFj4B=1.1238 FFj4b=4.691 FFj4C=3.2444 FFj4c=1.814 FFj4D=3.0209 FFj4d=1.757 FFj4E=0.0025 0.0100 
+Pt3p_6s05d7 FFj4A=1.3019 FFj4a=19.052 FFj4B=1.1904 FFj4b=4.286 FFj4C=3.3886 FFj4c=1.592 FFj4D=3.2484 FFj4d=1.554 FFj4E=0.0034 0.0087 
+Pt4p_6s05d6 FFj4A=1.2964 FFj4a=16.503 FFj4B=1.2497 FFj4b=3.964 FFj4C=1.7648 FFj4c=1.350 FFj4D=1.6992 FFj4d=1.305 FFj4E=0.0046 0.0066 
+Pt5p_6s05d5 FFj4A=1.2902 FFj4a=14.600 FFj4B=1.2945 FFj4b=3.709 FFj4C=0.5190 FFj4c=1.033 FFj4D=0.5122 FFj4d=0.963 FFj4E=0.0067 0.0054 
+Pt6p_6s05d4 FFj4A=0.0482 FFj4a=33.010 FFj4B=1.2661 FFj4b=12.839 FFj4C=1.3254 FFj4c=3.545 FFj4D=0.0455 FFj4d=0.144 FFj4E=0.0315 0.0027 
+Au1p_6s15d9 FFj4A=1.1686 FFj4a=22.808 FFj4B=1.0729 FFj4b=4.243 FFj4C=0.9462 FFj4c=1.573 FFj4D=0.7943 FFj4d=1.428 FFj4E=0.0036 0.0104 
+Au2p_6s05d9 FFj4A=1.2005 FFj4a=20.888 FFj4B=1.0879 FFj4b=4.203 FFj4C=0.8896 FFj4c=1.584 FFj4D=0.7371 FFj4d=1.428 FFj4E=0.0036 0.0109 
+Au3p_6s05d8 FFj4A=1.2033 FFj4a=17.722 FFj4B=1.1507 FFj4b=3.874 FFj4C=0.2426 FFj4c=1.455 FFj4D=0.1649 FFj4d=1.049 FFj4E=0.0053 0.0080 
+Au4p_6s05d7 FFj4A=1.2021 FFj4a=15.459 FFj4B=1.2003 FFj4b=3.615 FFj4C=0.6189 FFj4c=0.952 FFj4D=0.6028 FFj4d=0.886 FFj4E=0.0081 0.0074 
+Au5p_6s05d6 FFj4A=1.2007 FFj4a=13.734 FFj4B=1.2262 FFj4b=3.424 FFj4C=0.5164 FFj4c=0.401 FFj4D=0.5461 FFj4d=0.379 FFj4E=0.0216 0.0060 
+
 
 \end{verbatim}
 }
