--- a/doc/zk.tex
+++ b/doc/zk.tex
@@ -1,4 +1,4 @@
-\section{Magnetic Form factors for Neutrons}\label{zk}
+\section{Magnetic Form factors for Neutrons- ZK coefficients for Rare Earth Ions}\label{zk}
 
 The coefficients $Z(K')$ defined by equation (\ref{zkfkpkq}) are given for 
 the tri-positive rare earth ions. From (\ref{zkfkpkq}) it follows that
